--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+body {
+  background-color: oklch(92.9% 0.013 255.508);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+*{
+  box-sizing: border-box;
+}
